add jvm paramter